added the script to preprocess the groups data

--- a/preprocessing_data_clusters.ipynb
+++ b/preprocessing_data_clusters.ipynb
@@ -9,128 +9,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import libraries for data analysis\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "# import seaborn as sns\n",
-    "# import os\n",
-    "# import sys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "# Read data from this url \"https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/edit#gid=0\" and save it as groups\n",
-    "groups = pd.read_csv(\"https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0\") "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['codigo del grupo', 'nombre grupo', 'lider', 'avalado', 'estado',\n",
-       "       'clasificado en', 'link_grupos', 'link_perfiles', 'programa', 'area',\n",
-       "       'instituciones', 'fecha_creacion', 'lugar_creacion', 'gran_area',\n",
-       "       'anio'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# show me the column names\n",
-    "groups.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create a dataframe called groups_selected with the colnames \"codigo del grupo\", \"nombre grupo\", \"estado\", \"anio\"\n",
-    "groups_selected = groups[[\"codigo del grupo\", \"nombre grupo\", \"estado\", \"instituciones\",\"anio\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# count unique values in the column \"estado\" and save it as categorias\n",
-    "categorias = groups_selected[\"estado\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/8y/j69blw9d67l72pygvntywxj00000gn/T/ipykernel_5847/29754333.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  groups_selected[\"estado\"] = groups_selected[\"estado\"].replace(\"Categoría 00\", \"Grupo reconocido\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Change the values equals to \"Categoría 00\" to \"Grupo reconocido\" in the column \"estado\" of the dataframe groups_selected\n",
-    "groups_selected[\"estado\"] = groups_selected[\"estado\"].replace(\"Categoría 00\", \"Grupo reconocido\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# count unique values in the column \"estado\" and save it as categorias\n",
-    "categorias = groups_selected[\"estado\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/8y/j69blw9d67l72pygvntywxj00000gn/T/ipykernel_5847/52431159.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  groups_selected[\"estado\"] = groups_selected[\"estado\"].str.replace(\"Categoría \", \"\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Remove strings in the column \"estado\" that contains \"Categoría \"\n",
-    "groups_selected[\"estado\"] = groups_selected[\"estado\"].str.replace(\"Categoría \", \"\")\n"
+    "groups_raw = pd.read_csv(\"https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0\") \n",
+    "\n",
+    "# Create a dataframe called institutions_groups with the column \"instituciones\" from groups_raw\n",
+    "institutions_groups = groups_raw[\"instituciones\"]\n",
+    "\n",
+    "# Create a dataframe called institutions_groups counting the unique values of the column \"instituciones\" from groups_raw\n",
+    "institutions_groups = institutions_groups.value_counts()\n",
+    "\n",
+    "# Change the name of the column \"instituciones\" to \"groups\" in institutions_groups\n",
+    "institutions_groups = institutions_groups.rename(\"groups\")\n",
+    "\n",
+    "# Remove the strings \"Categoría \" from the column \"estado\" in groups_raw\n",
+    "groups_raw[\"estado\"] = groups_raw[\"estado\"].str.replace(\"Categoría \", \"\")\n",
+    "\n",
+    "# Values equals to \"00\" in the column \"estado\" in groups_raw are replaced by \"Grupo reconocido\"\n",
+    "groups_raw[\"estado\"] = groups_raw[\"estado\"].replace(\"00\", \"Grupo reconocido\")\n",
+    "\n",
+    "# Create a dataframe called institutions_gropus with the matrix of the values in the column \"instituciones\" and \"estado\" from groups_raw\n",
+    "institutions_category = pd.crosstab(groups_raw[\"instituciones\"], groups_raw[\"estado\"])\n",
+    "\n",
+    "# Create a dataframe called institutions_year with the unique values of \"instituciones\" and \"anio\" from groups_raw\n",
+    "institutions_year = groups_raw[[\"instituciones\", \"anio\"]].drop_duplicates()\n",
+    "\n",
+    "# From institutions_year, group by \"instituciones\" and filter by the lowest value of \"anio\"\n",
+    "institutions_year = institutions_year.groupby(\"instituciones\").min()\n",
+    "\n",
+    "# Create a dataframe called institutions_cleaned by merging institutions_groups, institutions_category and institutions_year\n",
+    "institutions_cleaned = institutions_groups.to_frame().merge(institutions_category, left_index=True, right_index=True).merge(institutions_year, left_index=True, right_index=True)"
    ]
   }
  ],
