added paper data

--- a/preprocessing_data_clusters.ipynb
+++ b/preprocessing_data_clusters.ipynb
@@ -1,78 +1,73 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Data getting"
-   ]
+  "cells": [
+    {
+      "cell_type": "raw",
+      "metadata": {},
+      "source": [
+        "---\n",
+        "title: Preprocessing data\n",
+        "author: Sebastian Robledo\n",
+        "date: \"Nov 20, 2022\"\n",
+        "format:\n",
+        "    html:   \n",
+        "        code-fold: true\n",
+        "---"
+      ],
+      "id": "2f108e4d"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "import pandas as pd\n",
+        "# run file from the root of the project called \"groups_preprocessing.py\"\n",
+        "%run groups_preprocessing.py"
+      ],
+      "id": "8c0f9139",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Preprocessing data"
+      ],
+      "id": "1501e5a8"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# create a variable called \"groups_raw\" from the url \"https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0\"\n",
+        "groups_raw = pd.read_csv(\"https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0\")\n",
+        "\n",
+        "# Run the function \"preprocess_groups\" on the variable \"groups_raw\"\n",
+        "institutions_1 = preprocessing_groups_institutions(groups_raw)"
+      ],
+      "id": "6f93b50f",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Show me the shape of the variable \"groups\"\n",
+        "institutions_1.shape"
+      ],
+      "id": "1747df41",
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "name": "python3",
+      "language": "python",
+      "display_name": "Python 3 (ipykernel)"
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import libraries for data analysis\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Read data from this url \"https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/edit#gid=0\" and save it as groups\n",
-    "groups_raw = pd.read_csv(\"https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0\") \n",
-    "\n",
-    "# Create a dataframe called institutions_groups with the column \"instituciones\" from groups_raw\n",
-    "institutions_groups = groups_raw[\"instituciones\"]\n",
-    "\n",
-    "# Create a dataframe called institutions_groups counting the unique values of the column \"instituciones\" from groups_raw\n",
-    "institutions_groups = institutions_groups.value_counts()\n",
-    "\n",
-    "# Change the name of the column \"instituciones\" to \"groups\" in institutions_groups\n",
-    "institutions_groups = institutions_groups.rename(\"groups\")\n",
-    "\n",
-    "# Remove the strings \"Categoría \" from the column \"estado\" in groups_raw\n",
-    "groups_raw[\"estado\"] = groups_raw[\"estado\"].str.replace(\"Categoría \", \"\")\n",
-    "\n",
-    "# Values equals to \"00\" in the column \"estado\" in groups_raw are replaced by \"Grupo reconocido\"\n",
-    "groups_raw[\"estado\"] = groups_raw[\"estado\"].replace(\"00\", \"Grupo reconocido\")\n",
-    "\n",
-    "# Create a dataframe called institutions_gropus with the matrix of the values in the column \"instituciones\" and \"estado\" from groups_raw\n",
-    "institutions_category = pd.crosstab(groups_raw[\"instituciones\"], groups_raw[\"estado\"])\n",
-    "\n",
-    "# Create a dataframe called institutions_year with the unique values of \"instituciones\" and \"anio\" from groups_raw\n",
-    "institutions_year = groups_raw[[\"instituciones\", \"anio\"]].drop_duplicates()\n",
-    "\n",
-    "# From institutions_year, group by \"instituciones\" and filter by the lowest value of \"anio\"\n",
-    "institutions_year = institutions_year.groupby(\"instituciones\").min()\n",
-    "\n",
-    "# Create a dataframe called institutions_cleaned by merging institutions_groups, institutions_category and institutions_year\n",
-    "institutions_cleaned = institutions_groups.to_frame().merge(institutions_category, left_index=True, right_index=True).merge(institutions_year, left_index=True, right_index=True)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3.10.3 64-bit ('scientometrics')",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.3"
-  },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "0e3d817cd9519402f68cdcf7a7487951283cf9badd039ddf3087b46d10d3bcd6"
-   }
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
