--- a/preprocessing_data_clusters.qmd
+++ b/preprocessing_data_clusters.qmd
@@ -10,27 +10,63 @@ format:
 The data is in this link
 https://drive.google.com/drive/u/1/folders/1nwv_jgXQhLbLJVh0dVgh9GSzV_VUj821
 
-```{python setup, include=FALSE}
-
+```{python}
 import pandas as pd
 # run file from the root of the project called "groups_preprocessing.py"
 %run groups_preprocessing.py
 ```
 
-# Preprocessing data
+# Preprocessing Groups
 ```{python}
 # create a variable called "groups_raw" from the url "https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0"
-groups_raw = pd.read_csv("https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0")
-
+groups = "https://drive.google.com/file/d/1JNncMKuaXSwuQEp-S6wui4jiDcPGoCkU/view?usp=sharing"
+groups = 'https://drive.google.com/uc?id=' + groups.split('/')[-2]
+groups = pd.read_csv("https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0")
 # Run the function "preprocess_groups" on the variable "groups_raw"
-institutions_1 = preprocessing_groups_institutions(groups_raw)
+groups = preprocessing_groups_institutions(groups_raw)
+```
+
+# Preprocessing researchers
+
+```{python}
+# create a variable called "researchers_raw" from the url "https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0"
+researchers = "https://drive.google.com/file/d/10x-1FRzpvko6Fd8czybg-5DhxVNTJ1-p/view?usp=share_link"
+researchers = 'https://drive.google.com/uc?id=' + researchers.split('/')[-2]
+researchers = pd.read_csv("https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0")
 ```
 
 ```{python}
-# Show me the shape of the variable "groups"
-institutions_1.shape
+# print the name of the columns of the variable "researchers"
+researchers.columns
 ```
 
+
+
+
+
+```{python}
+# create a variable called "researchers_raw" from the url "https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0"
+researchers = "https://drive.google.com/file/d/143u1k6A-LZDhhSGvREzNaXYT4aUEZlGN/view?usp=share_link"
+researchers = 'https://drive.google.com/uc?id=' + researchers.split('/')[-2]
+researchers = pd.read_csv("https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0")
+```
+
+How many instituciones do we have in reserachers?
+```{python}
+# group the variable "instituciones" in researchers and count the number of rows in each group and sort them in descending order and save the result in a variable called "researchers_institutions"
+researchers_institutions = researchers.groupby("instituciones").size().sort_values(ascending=False)
+```
+
+
+
+```{python}
+
+```
+
+
+
+
+## Reading data from papers
 ```{python}
 url='https://drive.google.com/file/d/1KrG-06OFCusN2JpgaqtaC4dl6sCpVaaX/view?usp=share_link'
 url='https://drive.google.com/uc?id=' + url.split('/')[-2]
@@ -38,7 +74,19 @@ papers = pd.read_csv(url)
 ```
 
 ```{python}
-df.shape
+# Show me the first ten row of papers dataframe
+papers.head(10)
 ```
 
 ```{python}
+integrantes='https://drive.google.com/file/d/143u1k6A-LZDhhSGvREzNaXYT4aUEZlGN/view?usp=share_link'
+integrantes='https://drive.google.com/uc?id=' + integrantes.split('/')[-2]
+integrantes = pd.read_csv(integrantes)
+```
+
+```{python}
+# read the data from this url "https://docs.google.com/spreadsheets/d/1xmA2VoQt3-cOC2b2-s3JQqt28XkS2Uz7erI2lriC-ys/export?format=csv&gid=1353066533" and remove the first row
+resumen = pd.read_csv("https://docs.google.com/spreadsheets/d/1xmA2VoQt3-cOC2b2-s3JQqt28XkS2Uz7erI2lriC-ys/export?format=csv&gid=1353066533", skiprows=1)
+```
+
+
