added researches and institutions

--- a/preprocessing_data_clusters.qmd
+++ b/preprocessing_data_clusters.qmd
@@ -16,28 +16,49 @@ import pandas as pd
 %run groups_preprocessing.py
 ```
 
+
 # Preprocessing Groups
 ```{python}
 # create a variable called "groups_raw" from the url "https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0"
 groups = "https://drive.google.com/file/d/1JNncMKuaXSwuQEp-S6wui4jiDcPGoCkU/view?usp=sharing"
 groups = 'https://drive.google.com/uc?id=' + groups.split('/')[-2]
-groups = pd.read_csv("https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0")
+groups_raw = pd.read_csv("https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0")
 # Run the function "preprocess_groups" on the variable "groups_raw"
 groups = preprocessing_groups_institutions(groups_raw)
 ```
 
+# Preprocessing products
+```{python}
+# create a variable called "groups_raw" from the url "https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0"
+papers = "https://drive.google.com/file/d/1KrG-06OFCusN2JpgaqtaC4dl6sCpVaaX/view?usp=share_link"
+papers = 'https://drive.google.com/uc?id=' + papers.split('/')[-2]
+papers = pd.read_csv(papers)
+
+# Group by "codigo_grupo" and count the number of values in column "titulo", save the data in dataframe called "dummy"
+dummy = papers.groupby(['codigo_grupo']).size().reset_index(name='counts')
+```
+
+python code
+```{python}
+# from groups_raw select the columns "codigo_grupo" and "instituciones", and merge with dummy by "codigo_grupo" and "codigo del grupo"
+#groups = groups_raw[['codigo_grupo', 'instituciones']].merge(dummy, on='codigo_grupo')
+
+papers_institutions = groups_raw[['codigo del grupo', 'instituciones']].merge(dummy, left_on='codigo del grupo', right_on= 'codigo_grupo')
+```
 # Preprocessing researchers
 
 ```{python}
 # create a variable called "researchers_raw" from the url "https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0"
-researchers = "https://drive.google.com/file/d/10x-1FRzpvko6Fd8czybg-5DhxVNTJ1-p/view?usp=share_link"
-researchers = 'https://drive.google.com/uc?id=' + researchers.split('/')[-2]
-researchers = pd.read_csv("https://docs.google.com/spreadsheets/d/1jNY8oEnunCXo80_BWsRtl2ejN6CQstWgs4quDNQpE8Y/export?format=csv&gid=0")
+researchers_url = "https://drive.google.com/file/d/143u1k6A-LZDhhSGvREzNaXYT4aUEZlGN/view?usp=share_link"
+researchers_raw = 'https://drive.google.com/uc?id=' + researchers_url.split('/')[-2]
+researchers = pd.read_csv(researchers_raw)
 ```
 
 ```{python}
-# print the name of the columns of the variable "researchers"
-researchers.columns
+dummy_1= researchers.groupby(['codigo_grupo']).size().reset_index(name='counts')
+
+researchers_institutions = groups_raw[['codigo del grupo', 'instituciones']].merge(dummy_1, left_on='codigo del grupo', right_on= 'codigo_grupo', how='left')
+```
 ```
 
 
